Travel::Status::DE::IRIS 1.58 - Mon Jul 19 2021

    * Result->has_realtime: Fix cancellations not being reported as realtime
    * db-iris: Annotate arrival/departure times which should have realtime
      data, but don't, with a question mark.

Travel::Status::DE::IRIS 1.57 - Sun Jul 18 2021

    * Result: Add arrival_has_realtime, departure_has_realtime, has_realtime
      accessors
    * Result->delay_messages: Leave out superseded messages (right now, the
      only case is "Defekt am Zug" -> "Behobener Defekt am Zug")
    * Stations: Add swiss and austrian stations reachable from Waldshut and
      Lindau

Travel::Status::DE::IRIS 1.56 - Sun Jun 20 2021

    * Update IRIS station list. Adds support for lots of
      Albtal-Verkehrs-Gesellschaft stations around Karlsruhe
    * Update some delay/qos messages ahead of a DB-wide change planned for
      October 2021

Travel::Status::DE::IRIS 1.55 - Tue May 04 2021

    * Fix transfer trains getting lost when requested from a related station.
      Notable offender: "Berlin Südkreuz" lacked S 41 / S42 (ring line
      from Südkreuz (S) to Südkreuz (S) with transfer to/from the next/previous
      incarnation), as it referenced "Berlin Südkreuz (S)". "Berlin Südkreuz (S)"
      itself worked fine.


Travel::Status::DE::IRIS 1.54 - Sat Jan 09 2021

    * Add stations DKP, DRBS, DSBG, KWHD, NCBD, TENS, XLHW

Travel::Status::DE::IRIS 1.53 - Sun Dec 13 2020

    * import station name changes and station removals from Winterfahrplan
      2021

Travel::Status::DE::IRIS 1.52 - Sun Nov 22 2020

    * get_station_by_name: Fix crash (unhandled exception) when the station
      name is an invalid regular expression

Travel::Status::DE::IRIS 1.51 - Thu Oct 22 2020

    * Add BER airport stations
    * Rename Schönefeld airport to BER Terminal 5

Travel::Status::DE::IRIS 1.50 - Thu Oct 15 2020

    * Add station Brunnen(Oberbay)
    * Incorporate station name and eva number changes from DB IRIS
      (affects nine stations)