@@ -1,3 +1,10 @@
+Travel::Status::DE::IRIS 1.59 - Sat Aug 14 2021
+
+    * Stations: get_station, get_station_by_name: Return immediately if
+      requested station is undef or empty
+    * Add stations Menningen-Leitishofen, Meßkirch, Sauldorf, Alvesta station,
+      Lund Central, and Stockholm Central
+
 Travel::Status::DE::IRIS 1.58 - Mon Jul 19 2021
 
     * Result->has_realtime: Fix cancellations not being reported as realtime
